Completed draft of related works

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -6,7 +6,44 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{Narayanan17,
+	author = {Narayanan, Arvind and Clark, Jeremy},
+	title = {Bitcoin's Academic Pedigree},
+	journal = {Commun. ACM},
+	issue_date = {December 2017},
+	volume = {60},
+	number = {12},
+	month = nov,
+	year = {2017},
+	issn = {0001-0782},
+	pages = {36--45},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/3132259},
+	doi = {10.1145/3132259},
+	acmid = {3132259},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
 
+@article{Bano17,
+	author    = {Shehar Bano and
+	Alberto Sonnino and
+	Mustafa Al{-}Bassam and
+	Sarah Azouvi and
+	Patrick McCorry and
+	Sarah Meiklejohn and
+	George Danezis},
+	title     = {Consensus in the Age of Blockchains},
+	journal   = {CoRR},
+	volume    = {abs/1711.03936},
+	year      = {2017},
+	url       = {http://arxiv.org/abs/1711.03936},
+	archivePrefix = {arXiv},
+	eprint    = {1711.03936},
+	timestamp = {Fri, 01 Dec 2017 14:22:24 +0100},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1711-03936},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @misc{BlockchainInfoPools,
 	Author = {Blockchain.info},
