--- a/paper/main.tex
+++ b/paper/main.tex
@@ -42,6 +42,7 @@ Scott's suggestions:
 \input{sections/introduction}
 \input{sections/academic}
 \input{sections/methodology}
+\input{sections/related-works}
 \input{sections/results}
 \input{sections/challenges}
 \input{sections/criteria}
