Added macro for notes

--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -67,3 +67,8 @@
 \newcommand{\normproperty}[1]{\textcolor{Orange}{\textbf{#1}}}
 \newcommand{\techproperty}[1]{\textcolor{NavyBlue}{\textbf{#1}}}
 \newcommand{\primitive}[1]{\textcolor{Green}{\textbf{#1}}}
+
+
+%-----------------------Notes------------------------------------%
+\usepackage{todonotes}
+\newcommand{\anote}[1]{\todo[inline]{Arkady:  #1}}
