First draft of updated challenges section

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1050,3 +1050,57 @@ Scalable off-chain instant payments},
   biburl    = {https://dblp.org/rec/bib/conf/nsdi/EyalGSR16},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{SSS:CXSGLS17,
+  author    = {Lin Chen and
+               Lei Xu and
+               Nolan Shah and
+               Zhimin Gao and
+               Yang Lu and
+               Weidong Shi},
+  title     = {On Security Analysis of Proof-of-Elapsed-Time (PoET)},
+  booktitle = {Stabilization, Safety, and Security of Distributed Systems - 19th
+               International Symposium, {SSS} 2017, Boston, MA, USA, November 5-8,
+               2017, Proceedings},
+  pages     = {282--297},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-69084-1\_19},
+  doi       = {10.1007/978-3-319-69084-1\_19},
+  timestamp = {Fri, 11 May 2018 23:42:32 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/sss/ChenXSGLS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{arxiv:GBERS18,
+  author    = {Adem Efe Gencer and
+               Soumya Basu and
+               Ittay Eyal and
+               Robbert van Renesse and
+               Emin G{\"{u}}n Sirer},
+  title     = {Decentralization in Bitcoin and Ethereum Networks},
+  journal   = {CoRR},
+  volume    = {abs/1801.03998},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1801.03998},
+  archivePrefix = {arXiv},
+  eprint    = {1801.03998},
+  timestamp = {Thu, 01 Feb 2018 19:52:26 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1801-03998},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{CCS:JueKosShi16,
+  author    = {Ari Juels and
+               Ahmed E. Kosba and
+               Elaine Shi},
+  title     = {The Ring of Gyges: Investigating the Future of Criminal Smart Contracts},
+  booktitle = {Proceedings of the 2016 {ACM} {SIGSAC} Conference on Computer and
+               Communications Security, Vienna, Austria, October 24-28, 2016},
+  pages     = {283--295},
+  year      = {2016},
+  url       = {http://doi.acm.org/10.1145/2976749.2978362},
+  doi       = {10.1145/2976749.2978362},
+  timestamp = {Mon, 24 Oct 2016 18:57:12 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ccs/JuelsKS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
