Updates to intro and methodology.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,17 +1,44 @@
 % !TEX root = ../main.tex
 
 \section{Introduction (Scott)}
-Short history of Bitcoin (1--2 paragraphs)
-	Summary of the research ideas that are part of Blockchain (Jeremy's article)
-	Bitcoin itself
-	
-Blockchain technology
-	Evolved from bitcoin
-	What can we do besides cryptocurrency?
-	
-Why industry?
-	Academia was slow to appreciate Bitcoin and later Blockchain technology
-	Industry saw potential and began running with it
-	Most of the interesting work is happening outside of academia
-		Academia is more focused on important, but more ticky-tacky details
-		Industry has built up knowledge around Blockchain, its properties, and its uses
+
+\begin{enumerate}
+
+	\item Bitcoin took the world by storm
+	\begin{enumerate}
+	\item While there were previous digital currencies, Bitcoin was the first truly successful currency
+	\item Strong interest in the decentralized nature of Bitcoin. Particularly in the notion that everyone collectively owned the system
+	\item Rocketed in value, before recently crashing
+	\end{enumerate}
+
+	\item Bitcoin has spawned many competing systems
+	\begin{enumerate}
+	\item Many are financial
+	\item Even more systems have explored whether the underlying technologies of Bitcoin can be used in new an interesting ways.
+	\end{enumerate}
+
+	\item This has left many researchers, businesses, and governments to ask: (1) what is blockchain and what properties does it provide, (2) would blockchain be useful for the work I am doing, and (3) what are the broad applications of Blockchain.
+	\begin{enumerate}
+		\item There have been some attempts to address these quesitons
+		\item Often, these answers are fragmented
+		\item Academia often speaks of specific features (ADS, blockchain, consensus), sometimes misses the forest for the trees
+		\item Interestingly, a lot of the thought leadership in this area is not from academia, but rather from industry, yet this information is often overlooked by academics
+		\begin{enumerate}
+			\item Academia has excelled at specific problems, and not the vision of this topic
+		\end{enumerate}
+	\end{enumerate}
+
+	\item In this paper, we attempt to answer these three questions by pulling data from industry
+	\begin{enumerate}
+		\item We used a grounded theory process to avoid imposing our research bias
+		\item Separated out fact from hype from misconceptions (which were rather rare and stemmed from a different vocabulary) 
+	\end{enumerate}
+
+	\item Contributions
+	\begin{enumerate}
+		\item Identify a clear set of criteria for determining whether Blockchain
+		\item Enumerate use cases for Blockchain technology and help prioritize them
+		\item Identify open problems regarding Blockchain technology. We also identify Academic work in this area.
+	\end{enumerate}
+
+\end{enumerate}
