related works & reorder sections

--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -1,6 +1,12 @@
 % !TEX root = ../main.tex
 
 \section{Related Works (Ben))}
+
+% Jeremy: Add in a few 
+% Blockchain Access Privacy: Challenges and Directions Ryan Henry, Amir Herzberg, and Aniket Kate To appear in IEEE Security and Privacy Magazine
+% On the Security and Performance of Proof of Work Blockchains
+% Do you need a Blockchain? Karl Wüst?, Arthur Gervais?
+
 Several prior authors have surveyed and systematized different aspects of the Blockchain landscape.
 One of the most comprehensive works is from Bonneau et al., focusing on Bitcoin and other cryptocurrencies~\cite{BMC+15}. The authors seek to understand how Bitcoin has worked successfully and securely in practice for several years despite the lack of a rigorous model for its correctness and security. From a host of disparate sources, they distill a clear technical overview of how Bitcoin works. They then systematize the properties sufficient for system stability and analyze how they hold up under different assumptions about the incentives for miners. Finally, they evaluate and compare proposed changes to Bitcoin including tweaks to system parameters, alternative consensus protocols, and improvements to privacy and anonymity and conclude with a discussion of additional functionalities that Bitcoin could be extended to provide.  
 
