Notes on sources of whitepapers for Scott

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -20,6 +20,14 @@ Lastly, we describe an academic literature review we conducted to enhance the re
 We cast a wide net when selecting industry documents on Blockchain technology.
 Below are several of the ways that we collected documents:
 
+% Jeremy: I don't have a record of when I started collecting whitepapers, but it seems it was around summer of 2016.
+% I used an rss feed of major bitcoin/blockchain newssites, primarily coindesk
+% For major accounting firms, banks, and tech companies, I would Google for them
+% I looked at some lists of whitepapers others published, I don't have a list of sources but I think these:
+% https://thefinanser.com/2016/02/the-best-free-research-papers-on-fintech-and-blockchain.html/
+% https://thefinanser.com/2016/03/the-best-blockchain-white-papers-march-2016-part-2.html/
+
+
 \begin{itemize}
 	\item \textbf{Ask Jeremy about how he collected documents.}
 	\item We collected white papers from companies that are members of the Hyperledger project~\cite{hyperledger} and from the Decentralized Identity Foundation~\cite{somethingHere}.
